@@ -1,15 +1,12 @@
 package kr.smartReciFit.soketServer;
 
 import java.io.BufferedReader;
-import java.io.BufferedWriter;
+import java.io.File;
 import java.io.IOException;
-import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.io.OutputStream;
 import java.io.OutputStreamWriter;
 import java.net.ServerSocket;
 import java.net.Socket;
-import java.nio.charset.StandardCharsets;
 
 public class JavaServer {
 
@@ -18,14 +15,28 @@ public class JavaServer {
 	Socket socket;
 	InputStreamReader reader;
 	OutputStreamWriter writer;
+	Process pythonProcess;
 
 	private JavaServer() {
 		try {
 			serverSocket = new ServerSocket(8000);
-			Runtime.getRuntime().exec("cmd /k start ./PythonClient.bat");
+			String path = this.getClass().getClassLoader().getResource("").getPath();
+			String fullPath = java.net.URLDecoder.decode(path, "UTF-8") + "kr/smartReciFit/soketServer";
+			System.out.println("fullPath = " + fullPath);
+
+			File currentDir = new File(fullPath);
+			System.out.println("Current Directory: " + currentDir);
+
+			// Python 파일 실행
+			ProcessBuilder processBuilder = new ProcessBuilder("python", "PythonClient.py");
+			processBuilder.directory(currentDir); // 작업 디렉토리 설정
+			processBuilder.redirectErrorStream(true); // 오류 스트림을 표준 출력과 함께 출력
+			processBuilder.start();
+
+			// 소켓 연결 대기
 			socket = serverSocket.accept();
-			reader = new InputStreamReader(socket.getInputStream(), StandardCharsets.UTF_8);
-			writer = new OutputStreamWriter(socket.getOutputStream(), StandardCharsets.UTF_8);
+			reader = new InputStreamReader(socket.getInputStream(), java.nio.charset.StandardCharsets.UTF_8);
+			writer = new OutputStreamWriter(socket.getOutputStream(), java.nio.charset.StandardCharsets.UTF_8);
 		} catch (IOException e) {
 			e.printStackTrace();
 		}
@@ -54,6 +65,9 @@ public class JavaServer {
 			if (serverSocket != null) {
 				serverSocket.close();
 			}
+			if (pythonProcess != null) {
+				pythonProcess.destroy(); // Python 프로세스 종료
+			}
 
 			instance = null;
 		} catch (IOException e) {
@@ -64,10 +78,13 @@ public class JavaServer {
 	public void reconnectSocket() {
 		try {
 			if (socket != null && socket.isClosed()) {
-				Runtime.getRuntime().exec("cmd /c start C:/KMK/python/PythonClient.bat");
+				ProcessBuilder processBuilder = new ProcessBuilder("python", "./PythonClient.py");
+				processBuilder.redirectErrorStream(true); // 오류 스트림을 표준 출력과 함께 출력
+				processBuilder.start();
+				// 소켓 연결 대기
 				socket = serverSocket.accept();
-				reader = new InputStreamReader(socket.getInputStream(), StandardCharsets.UTF_8);
-				writer = new OutputStreamWriter(socket.getOutputStream(), StandardCharsets.UTF_8);
+				reader = new InputStreamReader(socket.getInputStream(), java.nio.charset.StandardCharsets.UTF_8);
+				writer = new OutputStreamWriter(socket.getOutputStream(), java.nio.charset.StandardCharsets.UTF_8);
 			}
 		} catch (IOException e) {
 			e.printStackTrace();
